--- a/index.htm
+++ b/index.htm
@@ -77,8 +77,16 @@
                             <i class="max-sm:hidden fa-solid fa-cart-shopping border-2 border-slate-100 rounded-full py-4 px-4"></i>
                         </button>
                     </div>
-            <button class="max-sm:hidden rounded-full py-4 px-10 bg-[#ABEF5F] text-black lg:font-bold relative">Book Consult</button>
-            <i class="max-sm:hidden fa-solid fa-arrow-up fa-rotate-45 text-white h-7 w-7 rounded-full bg-black absolute l-6"> </i>
+            <button class="max-sm:hidden rounded-full py-4 px-10 bg-[#ABEF5F] text-black lg:font-bold">Book Consult</button>
+            <svg width="32.010620" height="32.010681" viewBox="0 0 32.0106 32.0107" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <desc>
+                        Created with Pixso.
+                </desc>
+                <defs/>
+                <rect id="arrow-up-right-01" rx="15.499997" width="30.999994" height="31.000031" transform="translate(0.510620 0.500000) rotate(0.019056)" fill="#1C1C1C" fill-opacity="1.000000"/>
+                <path id="Vector" d="M21 11L10 22" stroke="#FFFFFF" stroke-opacity="1.000000" stroke-width="1.500000" stroke-linecap="round"/>
+                <path id="Vector" d="M15 10.13C15 10.13 20.64 9.66 21.49 10.51C22.35 11.37 21.87 17 21.87 17" stroke="#FFFFFF" stroke-opacity="1.000000" stroke-width="1.500000" stroke-linejoin="round" stroke-linecap="round"/>
+            </svg>
             <!-- hem burger -->
             <div class="dropdown">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -592,6 +600,41 @@
         <!-- -----------------------------------------email section end -------------------------------->
 
     </main>
-    <footer></footer>
+    <footer class="bg-[#1C1C1C]">
+        <div class="flex justify-center items-center text-center">
+            
+                
+              <a class= "text-3xl h-7 w-7 font-bold ml-2 text-[#E9E9E9] ">Rinterio</a>
+        </div>
+
+            <!-- ------------------------------ -->
+            <div class=" lg:w-3/4 w-full items-center lg:py-4 lg-px-4 py-6 px-6 flex flex-col mx-auto mb-10">
+                <h1 class="lg:text-4xl text-xl text-center font-bold text-primary text-[#E9E9E9] ">Read Our Articles and News </h1>
+                    <p class="text-center mt-4 max-w-fit lg:mx-auto text-secondary ">
+                        The barn house captivates with its blend of rustic charm and modern sophistication, <br>
+                        featuring weathered wood, sleek metal accents
+                    </p>   
+                    <div class="grid grid-cols-5 gap-24 font-bold text-[#E9E9E9]">
+                        <div>
+                            Home
+                        </div>
+                        <div>
+                            Services
+                        </div>
+                        <div>
+                            Portfolio
+                        </div>
+                        <div>
+                            Blogs
+                        </div>
+                        <div>
+                            ContactUs
+                        </div>
+
+                    </div>                    
+            </div>
+
+        </div>
+    </footer>
 </body>
 </html>
