--- a/index.htm
+++ b/index.htm
@@ -153,7 +153,7 @@
     </header>
     <main>
         <!-- liveable spaces start -->
-         <section class="bg-slate-50 overflow-hidden ">
+         <section class="bg-slate-50 mt-24 ">
          <!-- <section> -->
 
 
@@ -670,7 +670,7 @@
                     </div> 
                     <button class=" relative rounded-full py-4 px-10 bg-[#ABEF5F] text-black lg:font-bold mt-10">Book Consult</button> 
 
-                    <div class="absolute lg:mt-[220px] lg:ml-[140px] mt-[715px] ml-[130px]">
+                    <div class="absolute lg:mt-[220px] lg:ml-[140px] mt-[821px] ml-[130px]">
                         <svg  width="32.010620" height="32.010681" viewBox="0 0 32.0106 32.0107" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/ xlink">
                             <desc>
                                     Created with Pixso.
